preventing layout shift by always persisting the scroll bar

--- a/src/input.css
+++ b/src/input.css
@@ -13,6 +13,7 @@
 
 body {
   background-color: #e7e6e0;
+  overflow-y: scroll;
 }
 
 h1,
