--- a/src/output.css
+++ b/src/output.css
@@ -870,6 +870,7 @@ video {
 
 body {
   background-color: #e7e6e0;
+  overflow-y: scroll;
 }
 
 h1,
